Ajout de texte et paragraphe

--- a/html/index.html
+++ b/html/index.html
@@ -9,8 +9,12 @@
 </head>
 
 <body>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni eum repellat repudiandae similique ea autem eaque, accusantium,
+        harum distinctio necessitatibus blanditiis perferendis temporibus? Et tenetur, ipsum alias accusamus molestiae est?</p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis exercitationem nulla, tempore officiis ea nesciunt culpa
-    sed voluptatibus at recusandae! Nulla sint, distinctio assumenda maiores deleniti nam recusandae fuga! Ad?
+    sed voluptatibus at recusandae! Nulla sint, distinctio assumenda maiores deleniti nam recusandae fuga! Ad?Lorem ipsum
+    dolor sit amet consectetur adipisicing elit. Reprehenderit voluptas repellat consequuntur obcaecati sequi non dignissimos
+    vel laudantium amet cum numquam nisi libero quasi, rerum commodi voluptatem earum doloribus! Praesentium!
 </body>
 
 </html>
