Elaboration de l'entête avec la barre de navigation ainsi que les titres

--- a/html/index.html
+++ b/html/index.html
@@ -9,12 +9,31 @@
 </head>
 
 <body>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni eum repellat repudiandae similique ea autem eaque, accusantium,
-        harum distinctio necessitatibus blanditiis perferendis temporibus? Et tenetur, ipsum alias accusamus molestiae est?</p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis exercitationem nulla, tempore officiis ea nesciunt culpa
-    sed voluptatibus at recusandae! Nulla sint, distinctio assumenda maiores deleniti nam recusandae fuga! Ad?Lorem ipsum
-    dolor sit amet consectetur adipisicing elit. Reprehenderit voluptas repellat consequuntur obcaecati sequi non dignissimos
-    vel laudantium amet cum numquam nisi libero quasi, rerum commodi voluptatem earum doloribus! Praesentium!
+    <header>
+        <nav>
+            <!-->C'est la barre de navigation qu'on utilise pour aller sur les différents onglets </!-->
+            <ul>
+                <!-->le menu </!-->
+                <a href="www."> Compétences
+                </a>
+                <a href="www."> Services
+                </a>
+                <a href="www."> Projets
+                </a>
+                <a href="www."> Formulaire de contact
+                </a>
+            </ul>
+        </nav>
+        <h1 style="color:white">
+            <strong>
+                LOOKING FOR A WEB DEVELOPER ?
+                <strong/>
+        </h1>
+        <h2 style="color: white"> Look no more,I'm a web developer an a web designer.
+
+        </h2>
+
+        <header/>
 </body>
 
 </html>
