--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,8 @@
 <body>
     <header>
         <nav>
-            <!-->C'est la barre de navigation qu'on utilise pour aller sur les différents onglets </!-->
+            <!-->C'est la barre de navigation qu'on utilise pour aller sur les différents onglets lo
+            </!-->
             <ul>
                 <!-->le menu </!-->
                 <a href="www."> Compétences
