correction des commentaires

--- a/html/index.html
+++ b/html/index.html
@@ -11,10 +11,9 @@
 <body>
     <header>
         <nav>
-            <!-->C'est la barre de navigation qu'on utilise pour aller sur les différents onglets lo
-            </!-->
+            <!-->C'est la barre de navigation qu'on utilise pour aller sur les différents onglets</-->
             <ul>
-                <!-->le menu </!-->
+                <!--le menu -->
                 <a href="www."> Compétences
                 </a>
                 <a href="www."> Services
