Modification de mon menu de navigation

--- a/html/index.html
+++ b/html/index.html
@@ -11,17 +11,25 @@
 <body>
     <header>
         <nav>
-            <!-->C'est la barre de navigation qu'on utilise pour aller sur les différents onglets</-->
+            <!--C'est la barre de navigation qu'on utilise pour aller sur les différents onglets-->
             <ul>
                 <!--le menu -->
-                <a href="www."> Compétences
-                </a>
-                <a href="www."> Services
-                </a>
-                <a href="www."> Projets
-                </a>
-                <a href="www."> Formulaire de contact
-                </a>
+                <li>
+                    <a href="www."> Compétences
+                    </a>
+                </li>
+                <li>
+                    <a href="www."> Services
+                    </a>
+                </li>
+                <li>
+                    <a href="www."> Projets
+                    </a>
+                </li>
+                <li>
+                    <a href="www."> Formulaire de contact
+                    </a>
+                </li>
             </ul>
         </nav>
         <h1 style="color:white">
