--- a/html/index.html
+++ b/html/index.html
@@ -15,19 +15,20 @@
             <ul>
                 <!--le menu -->
                 <li>
-                    <a href="www."> Compétences
+                    <a href="https://www.google.be/search?q=comp%C3%A9tences&oq=comp%C3%A9tences&aqs=chrome..69i57j0l5.1990j0j7&sourceid=chrome&ie=UTF-8">
+                        Compétences
                     </a>
                 </li>
                 <li>
-                    <a href="www."> Services
+                    <a href="https://fr.wikipedia.org/wiki/Service_(%C3%A9conomie)"> Services
                     </a>
                 </li>
                 <li>
-                    <a href="www."> Projets
+                    <a href="http://www.linternaute.com/dictionnaire/fr/definition/projet/"> Projets
                     </a>
                 </li>
                 <li>
-                    <a href="www."> Formulaire de contact
+                    <a href="http://www.actiris.be/ce/tabid/760/language/fr-BE/Formulaire-de-contact.aspx"> Formulaire de contact
                     </a>
                 </li>
             </ul>
