modification pour le titre

--- a/html/index.html
+++ b/html/index.html
@@ -34,11 +34,10 @@
             </ul>
         </nav>
         <h1 style="color:white">
-            <strong>
-                LOOKING FOR A WEB DEVELOPER ?
+            <strong>LOOKING FOR A WEB DEVELOPER ?
                 <strong/>
         </h1>
-        <h2 style="color: white"> Look no more,I'm a web developer an a web designer.
+        <h2 style="color: white">Look no more,I'm a web developer an a web designer.
 
         </h2>
 
