Changement de parametres style pour le titre

--- a/html/index.html
+++ b/html/index.html
@@ -33,11 +33,10 @@
                 </li>
             </ul>
         </nav>
-        <h1 style="color:white">
-            <strong>LOOKING FOR A WEB DEVELOPER ?
-                <strong/>
+        <h1>LOOKING FOR A WEB DEVELOPER ?
+
         </h1>
-        <h2 style="color: white">Look no more,I'm a web developer an a web designer.
+        <h2>Look no more,I'm a web developer an a web designer.
 
         </h2>
 
