Modification du header

--- a/html/index.html
+++ b/html/index.html
@@ -37,11 +37,36 @@
         <h1>LOOKING FOR A WEB DEVELOPER ?
 
         </h1>
-        <h2>Look no more, I'm a web developer an a web designer.
 
+        <h2>Look no more, I'm a web developer an a web designer.
         </h2>
 
-        <header/>
+    </header>
+    <section>
+        <h1>
+            Compétences
+        </h1>
+
+    </section>
+    <section>
+        <h1>Services
+
+        </h1>
+    </section>
+    <section>
+        <h1>Projets
+
+        </h1>
+
+    </section>
+    <section>
+        <h1> Formulaire de contact
+
+        </h1>
+    </section>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
