Correction de la barre de navigation ainsi que la création dde section

--- a/html/index.html
+++ b/html/index.html
@@ -34,6 +34,7 @@
                 </li>
             </ul>
         </nav>
+        </br>
         <h1>LOOKING FOR A WEB DEVELOPER ?
 
         </h1>
@@ -46,27 +47,35 @@
         <h1>
             Compétences
         </h1>
+        <div>
 
+        </div>
     </section>
     <section>
         <h1>Services
-
         </h1>
+        <div>
+
+        </div>
     </section>
     <section>
         <h1>Projets
-
         </h1>
+        <div>
+
+        </div>
 
     </section>
     <section>
         <h1> Formulaire de contact
-
         </h1>
-    </section>
-    <footer>
+        <div>
 
-    </footer>
+        </div>
+    </section>
 </body>
+<footer>
+</footer>
+
 
 </html>
