modification de la barre de navigation

--- a/html/index.html
+++ b/html/index.html
@@ -35,11 +35,11 @@
             </ul>
         </nav>
         </br>
-        <h1>LOOKING FOR A WEB DEVELOPER ?
+        <h1> GHARBI Fatima
 
         </h1>
 
-        <h2>Look no more, I'm a web developer an a web designer.
+        <h2> Web Developer and Web Designer
         </h2>
 
     </header>
