Fin de l'exercices + ancrage de ma page portfolio

--- a/html/index.html
+++ b/html/index.html
@@ -16,20 +16,19 @@
             <ul>
                 <!--le menu -->
                 <li>
-                    <a href="https://www.google.be/search?q=comp%C3%A9tences&oq=comp%C3%A9tences&aqs=chrome..69i57j0l5.1990j0j7&sourceid=chrome&ie=UTF-8">
-                        Compétences
+                    <a href="#Compétences"> "Compétences"
                     </a>
                 </li>
                 <li>
-                    <a href="https://fr.wikipedia.org/wiki/Service_(%C3%A9conomie)"> Services
+                    <a href="#Services"> "Services"
                     </a>
                 </li>
                 <li>
-                    <a href="http://www.linternaute.com/dictionnaire/fr/definition/projet/"> Projets
+                    <a href="#Projets"> "Projets"
                     </a>
                 </li>
                 <li>
-                    <a href="http://www.actiris.be/ce/tabid/760/language/fr-BE/Formulaire-de-contact.aspx"> Formulaire de contact
+                    <a href="#Formulaire de contact"> "Formulaire de contact"
                     </a>
                 </li>
             </ul>
@@ -45,21 +44,27 @@
     </header>
     <section>
         <h1>
-            Compétences
+            <div id="Compétences">
+
+                Compétences
+            </div>
         </h1>
+    </section>
+    <section>
+        <h1>
+            <div id="Services">
+                Services
+        </h1>
+        </div>
         <div>
 
         </div>
     </section>
     <section>
-        <h1>Services
-        </h1>
-        <div>
+        <h1>
+            <div id="Projets">Projets
 
-        </div>
-    </section>
-    <section>
-        <h1>Projets
+            </div>
         </h1>
         <div>
 
@@ -67,7 +72,10 @@
 
     </section>
     <section>
-        <h1> Formulaire de contact
+        <h1>
+            <div id="Formulaire de contact">Formulaire de contact
+
+            </div>
         </h1>
         <div>
 
