--- a/exercice/html/index3.html
+++ b/exercice/html/index3.html
@@ -5,41 +5,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="../public/css/style3.css">
     <title>Document</title>
 </head>
 
 <body>
 
     <section>
+
+        <div>A</div>
+        <div>B</div>
+        <div>C</div>
         <h1>Section 1</h1>
-        <div></div>
-        <div></div>
-        <div></div>
     </section>
     <section>
+
+        <div>A</div>
+        <div>B</div>
+        <div>C</div>
         <h1>Section 2</h1>
-        <div></div>
-        <div></div>
-        <div></div>
     </section>
     <section>
+
+        <div>A</div>
+        <div>B</div>
+        <div>C</div>
         <h1>Section 3</h1>
-        <div></div>
-        <div></div>
-        <div></div>
     </section>
     <section>
-        <h1>Section 4</h1>
-        <div>
-            <div>
-                <div></div>
+
+        <div> A
+            <div> B
+                <div> C</div>
             </div>
         </div>
+        <h1>Section 4</h1>
     </section>
     <section>
+
+        <div>A</div>
         <h1>Section 5</h1>
-        <div></div>
+    </section>
+    <section>
+        <h1>Section 6</h1>
     </section>
 
 </body>
