fin de l'exercice 1

--- a/exercice/html/index4.html
+++ b/exercice/html/index4.html
@@ -8,25 +8,29 @@
     <title>Document</title>
     <link rel="stylesheet" href="../public/css/style4.css">
 </head>
+<div class="super-containers">
 
-<body>
-    <div class="containers">
-        <section>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, voluptas? Voluptatum reprehenderit quasi eveniet dolor,
+    <body>
+        <div class="containers">
+            <section>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, voluptas? Vol
 
-        </section>
-        <section>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus autem at minus recusandae culpa illum quas odit est nihil.
-            Veritatis facilis reiciendis, autem quo quibusdam laboriosam ad tenetur aliquam odio.
-        </section>
-        <section>
-            Necessitatibus ipsam saepe ipsa, eos nulla corrupti alias, molestiae enim nobis aliquam
-        </section>
-        <section>
-            Error provident aut, unde veniam corporis necessitatibus molestias, pariatur distinctio tempora maiores deserunt neque a,
-            nulla ad hic vel cupiditate aspernatur quae!
-        </section>
-    </div>
-</body>
+            </section>
+            <section>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident porro voluptatum, eaque totam eveniet repellat illo doloribus,
+                harum eos commodi in corrupti adipisci culpa. Ullam neque autem nihil repellat cum? Lorem ipsum, dolor sit
+
+            </section>
+            <section>
+                Necessitatibus ipsam saepe ipsa, eos nulla corrupti alias, molestiae enim nobis aliquam Lorem, ipsum dolor sit amet consectetur
+                ad
+            </section>
+            <section>
+                Error provident aut, unde veniam corporis necessitatibus molestias, pariatur distinctio tempora maiores deserunt neque a,
+                n
+            </section>
+        </div>
+    </body>
+</div>
 
 </html>
