--- a/exercice/html/index5.html
+++ b/exercice/html/index5.html
@@ -6,54 +6,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="../public/css/style5.css">
 </head>
 
 <body>
-    <div>
-        <p>1</p>
+    <div class="containers1">
+        <section>
+            <p>1</p>
+        </section>
+    </div>
+    <div class="containers2">
+
+        <section>
+            <p>2</p>
+
+        </section>
+        <section>
+            <p>2</p>
+        </section>
+
 
     </div>
-    <div>
-        <div>
-            <p>2</p>
-        </div>
-        <div>
-            <p>2</p>
-        </div>
+    <div class="containers3">
+
+        <section>
+            <p>3</p>
+        </section>
+        <section>
+            <p>3</p>
+        </section>
+        <section>
+            <p>3</p>
+        </section>
 
     </div>
-    <div>
-        <div>
-            <p>3</p>
-        </div>
-        <div>
-            <p>3</p>
-        </div>
-        <div>
-            <p>3</p>
-        </div>
-    </div>
-    <div>
-        <div>
+    <div class="containers4">
+
+        <section>
             <p>12</p>
-        </div>
-        <div>
+        </section>
+        <section>
             <p>12</p>
-        </div>
-        <div>
+        </section>
+        <section>
             <p>12</p>
-        </div>
-        <div>
+        </section>
+        <section>
             <p>12</p>
-        </div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        </section>
+        <section>
+            <p>12</p>
+        </section>
+        <section>
+            <p>12</p>
+        </section>
+        <section>
+            <p>12</p>
+        </section>
+        <section>
+            <p>12</p>
+        </section>
+        <section>
+            <p>12</p>
+        </section>
+        <section>
+            <p>12</p>
+        </section>
+        <section>
+            <p>12</p>
+        </section>
+        <section>
+            <p>12</p>
+        </section>
+
     </div>
 </body>
 
