--- a/ex-Emmet/emmet.html
+++ b/ex-Emmet/emmet.html
@@ -92,6 +92,27 @@
 </ul>
 
 
+<!-- ul#navigation>li*5>{Item $} -->
+<ul id="navigation">
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+    <li>Item 4</li>
+    <li>Item 5</li>
+</ul>
+
+
+
+<!-- ul>li.item$@3*5 -->
+<ul>
+    <li class="item3"></li>
+    <li class="item4"></li>
+    <li class="item5"></li>
+    <li class="item6"></li>
+    <li class="item7"></li>
+</ul>
+
+
 <!-- div+ul+li -->
 <div></div>
 <ul></ul>
