mise à jour de la barre nav

--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
     <link rel="stylesheet" href="../public/css/style.css">
+    <link rel="stylesheet" href="../npm-exo/node_modules/font-awesome/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -16,19 +17,23 @@
             <ul>
                 <!--le menu -->
                 <li>
-                    <a href="#Compétences"> "Compétences"
+                    <i class="fa fa-cogs" aria-hidden="true"></i>
+                    <a href="#Compétences"> Compétences
                     </a>
                 </li>
                 <li>
-                    <a href="#Services"> "Services"
+                    <i class="fa fa-handshake-o" aria-hidden="true"></i>
+                    <a href="#Services"> Services
                     </a>
                 </li>
                 <li>
-                    <a href="#Projets"> "Projets"
+                    <i class="fa fa-folder-open-o" aria-hidden="true"></i>
+                    <a href="#Projets"> Projets
                     </a>
                 </li>
                 <li>
-                    <a href="#Formulaire de contact"> "Formulaire de contact"
+                    <i class="fa fa-address-card" aria-hidden="true"></i>
+                    <a href="#Formulaire de contact"> Contact
                     </a>
                 </li>
             </ul>
