--- a/travail/html/index.html
+++ b/travail/html/index.html
@@ -8,6 +8,11 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="../public/css/style.css">
     <link rel="stylesheet" href="../../npm-exo/node_modules/font-awesome/css/font-awesome.min.css">
+
+    <!-- lien Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
