nav barre bootstrap

--- a/travailB/html/index.html
+++ b/travailB/html/index.html
@@ -18,7 +18,46 @@
 
 <body>
     <header>
-        <nav>
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Home</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="active">
+                        <a href="#">Compétences</a>
+                    </li>
+                    <li>
+                        <a href="#">Services</a>
+                    </li>
+                    <li>
+                        <a href="#">Projets</a>
+                    </li>
+                    <li>
+                        <a href="">Formulaire de contact</a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <ul id="icones">
+                        <!--icones reseaux sociaux-->
+                        <li>
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </li>
+                        <li>
+                            <i class="fa fa-facebook-square" aria-hidden="true">
+                            </i>
+                        </li>
+                        <li>
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </li>
+                        <li>
+                            <i class="fa fa-google-plus" aria-hidden="true"></i>
+                        </li>
+                    </ul>
+                </ul>
+            </div>
+        </nav>
+        <!-- <nav>
             <ul id="menu">
                 <li>
                     <a href="#menu">Home</a>
@@ -37,22 +76,22 @@
                 </li>
             </ul>
             <ul id="icones">
-                <!-- icones reseaux sociaux -->
-                <li>
-                    <i class="fa fa-twitter" aria-hidden="true"></i>
-                </li>
-                <li>
-                    <i class="fa fa-facebook-square" aria-hidden="true">
-                    </i>
-                </li>
-                <li>
-                    <i class="fa fa-instagram" aria-hidden="true"></i>
-                </li>
-                <li>
-                    <i class="fa fa-google-plus" aria-hidden="true"></i>
-                </li>
-            </ul>
-        </nav>
+                 icones reseaux sociaux 
+        <li>
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+        </li>
+        <li>
+            <i class="fa fa-facebook-square" aria-hidden="true">
+            </i>
+        </li>
+        <li>
+            <i class="fa fa-instagram" aria-hidden="true"></i>
+        </li>
+        <li>
+            <i class="fa fa-google-plus" aria-hidden="true"></i>
+        </li>
+        </ul>
+        </nav> -->
         <div id="banner">
             <h1>GHARBI FATIMA</h1>
             <p>I'm a web designer and web developer</p>
